[package]
name = "whoisit"
version = "0.1.0"
authors = ["Thomas Karpiniec <tk@1.21jiggawatts.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-preview = "=0.3.0-alpha.19"

[dependencies.tokio]
version = "0.2.0-alpha.6"
features = ["process"]
