[package]
name = "whoisit"
version = "0.1.0"
authors = ["Thomas Karpiniec <tk@1.21jiggawatts.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.3.1", features = ["codec"] }

